react/supa-games/src/styles/profile-dropdown.css
.icons {
    position: fixed;
    display: flex;
    align-items: center;
    gap: 0px;
    font-size: 20px;
    margin-top: 12.5px;
    right: 15px;
}

.icons a img {
    width: 35px;
    height: 35px;
    padding: 6px;
    border-radius: 50%;
    user-select: none;
}

.profile-dropdown {
    position: relative;
    display: inline-block;
}

#profile-image {
    width: 35px;
    height: 35px;
    border-radius: 50%;
    cursor: pointer;
}

#profile-image:hover {
    outline: 2px solid blueviolet;
}

.dropdown-menu {
    display:block;
    position: fixed;
    min-width: 200px;
    padding: 8px 0;
    right: 10px;
    top: 60px;
    background-color: #1C2C3B;
    border-radius: 4px;
    box-shadow: 0 4px 10px rgba(0,0,0,0.35);
    z-index: 10000;
    flex-direction: column;
}

.dropdown-menu a {
    text-decoration: none;
    display: block;
    color: #ccc;
    padding: 10px 15px;
    font-size: 20px; /* 20 - 18 - 16 (?) */
}

.dropdown-menu a:hover {
    background-color: #2a3b4f;
    color: #fff;
    text-decoration: underline;
    text-underline-offset: 5px;
}

.profile-dropdown.show .dropdown-menu {
    display: flex;
}

.dropdown-menu hr {
    border: none;
    border-top: 1px solid #2f4055;
    margin: 6px 0;
}

.menu-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: #ccc;
    font-size: 18px; /* Menorzinho que os links */
    padding: 6px 12px;
    gap: 10px;
}

.menu-item input[type="range"] {
    width: 100px;
    cursor: pointer;
    accent-color: blueviolet;
}

.switch {
    position: relative;
    display: inline-block;
    width: 46.5px;
    height: 24px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0; bottom: 0;
    left: 0; right: 0;
    background-color: #555;
    transition: 0.3s;
    border-radius: 24px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: 3px;
    bottom: 3px;
    background-color: white;
    transition: 0.3s;
    border-radius: 50%;
}

.switch input:checked + .slider {
    background-color: blueviolet;
}

.switch input:checked + .slider:before {
    transform: translateX(21px);
}

body.light-theme .dropdown-menu {
    background-color: #a0b5b8;
    color: #000;
}

body.light-theme {
    background-color: #dff2f1;
}
body.light-theme * {
    color: #000;
}

body.light-theme .icons {
    filter: invert(1);
}

body.light-theme .profile-dropdown #profile-image {
    filter: invert(1);
}

